examples/test/testpolicy6619.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6619
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key13: value1
      key3: value14
      key24: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value42
          key20: value36
      podSelector:
        matchLabels:
          key1: value40
          key38: value20
